--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -7,9 +7,14 @@
 }
 
 .header {
+    font-size: 1.2rem;;
   height: 7rem;
   background-color: #fff;
   border-bottom: var(--color-grey-light-2);
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .content {
