--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -7,7 +7,7 @@
 }
 
 .header {
-    font-size: 1.2rem;;
+    font-size: 1.2rem;
   height: 7rem;
   background-color: #fff;
   border-bottom: var(--color-grey-light-2);
