--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,10 @@ body {
 
 .sidebar {
   background-color: var(--color-grey-dark-1);
-  flex: 0 0 18%; }
+  flex: 0 0 18%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
 
 .hotel-view {
   background-color: #fff;
@@ -150,7 +153,7 @@ body {
     width: 2.25rem;
     fill: var(--color-grey-dark-2); }
   .user-nav__notification {
-    font-size: .8rem;
+    font-size: 0.8rem;
     height: 1.5rem;
     width: 1.5rem;
     border-radius: 100rem;
@@ -158,7 +161,7 @@ body {
     color: #fff;
     position: absolute;
     top: 1.5rem;
-    right: .5rem;
+    right: 0.5rem;
     display: flex;
     align-items: center;
     justify-content: center; }
@@ -168,3 +171,13 @@ body {
     height: 3.75rem;
     border-radius: 50%;
     margin-right: 1rem; }
+
+.side-nav__icon {
+  width: 1.75rem;
+  height: 1.75rem; }
+
+.legal {
+  font-size: 1.2rem;
+  text-align: center;
+  padding: 2.5rem;
+  color: var(--color-grey-light-4); }
