--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -7,7 +7,7 @@
 }
 
 .header {
-    font-size: 1.2rem;
+  font-size: 1.2rem;
   height: 7rem;
   background-color: #fff;
   border-bottom: var(--color-grey-light-2);
@@ -25,6 +25,10 @@
   background-color: var(--color-grey-dark-1);
 
   flex: 0 0 18%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .hotel-view {
