--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ Grey dark 3: #999
   --color-grey-dark-2: #777;
   --color-grey-dark-3: #999;
   --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+  --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.1);
   /* Font sizes */
   --font-size-xxxl: 2.5rem;
   --font-size-xxl: 1.8rem;
@@ -43,7 +44,8 @@ Grey dark 3: #999
   --line-height: 1.6;
   --spacing: 2rem;
   --spacing-small: 1rem;
-  --radius: 0.3rem; }
+  --radius: 0.3rem;
+  --line: 1px solid var(--color-grey-light-2); }
 
 * {
   margin: 0;
@@ -74,7 +76,7 @@ body {
   font-size: 1.2rem;
   height: 7rem;
   background-color: #fff;
-  border-bottom: 1px solid var(--color-grey-light-2);
+  border-bottom: var(--line);
   display: flex;
   justify-content: space-between;
   align-items: center; }
@@ -91,6 +93,24 @@ body {
 
 .hotel-view {
   background-color: #fff;
+  flex: 1; }
+
+.detail {
+  display: flex;
+  padding: 4rem;
+  background-color: var(--color-grey-light-1);
+  border-bottom: var(--line); }
+
+.description {
+  font-size: 1.3rem;
+  background-color: #fff;
+  flex: 0 0 60%;
+  margin-right: 4rem;
+  box-shadow: var(--shadow-light);
+  padding: 3rem; }
+
+.user-reviews {
+  background-color: #ff3;
   flex: 1; }
 
 .logo {
@@ -224,7 +244,7 @@ body {
 
 .overview {
   display: flex;
-  border-bottom: 1px solid var(--color-grey-light-2);
+  border-bottom: var(--line);
   align-items: center; }
   .overview__heading {
     font-size: 2.25rem;
