--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -32,6 +32,7 @@ Grey dark 3: #999
   --color-grey-dark-3: #999;
 
   --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+  --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.1);
 
   /* Font sizes */
   --font-size-xxxl: 2.5rem;
@@ -51,6 +52,8 @@ Grey dark 3: #999
   --spacing: 2rem;
   --spacing-small: 1rem;
   --radius: 0.3rem;
+
+  --line: 1px solid var(--color-grey-light-2);
 }
 
 * {
