--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -10,7 +10,7 @@
   font-size: 1.2rem;
   height: 7rem;
   background-color: #fff;
-  border-bottom: 1px solid var(--color-grey-light-2);
+  border-bottom: var(--line);
 
   display: flex;
   justify-content: space-between;
@@ -33,5 +33,26 @@
 
 .hotel-view {
   background-color: #fff;
+  flex: 1;
+}
+
+.detail {
+  display: flex;
+  padding: 4rem;
+  background-color: var(--color-grey-light-1);
+  border-bottom: var(--line);
+}
+
+.description {
+  font-size: 1.3rem;
+  background-color: #fff;
+  flex: 0 0 60%;
+  margin-right: 4rem;
+  box-shadow: var(--shadow-light);
+  padding: 3rem;
+}
+
+.user-reviews {
+  background-color: #ff3;
   flex: 1;
 }
