Main page part 1

--- a/css/style.css
+++ b/css/style.css
@@ -281,7 +281,7 @@ body {
     font-weight: 300;
     margin-bottom: -4px; }
   .overview__rating-count {
-    font-size: .8rem;
+    font-size: 0.8rem;
     text-transform: uppercase; }
 
 .btn-inline {
