--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -254,9 +254,18 @@
   cursor: pointer;
   transition: all 0.2s;
 
+  & span {
+    margin-left: 0.5rem;
+    transition: margin-left 0.2s;
+  }
+
   &:hover {
     color: var(--color-grey-dark-1);
     transform: translateY(-2px);
+
+    span {
+      margin-left: 1rem;
+    }
   }
 
   &:focus {
@@ -308,8 +317,8 @@
     display: inline-block;
     height: 1rem;
     width: 1rem;
-    margin-right: .7rem;
-    
+    margin-right: 0.7rem;
+
     background-color: var(--color-primary);
     -webkit-mask-image: url(../img/chevron-thin-right.svg);
     mask-image: url(../img/chevron-thin-right.svg);
@@ -336,5 +345,64 @@
     &:not(:last-child) {
       margin-right: -1.5rem;
     }
+  }
+}
+
+.review {
+  background-color: #fff;
+  box-shadow: var(--shadow-light);
+  margin-bottom: 3rem;
+  padding: 3rem;
+  position: relative;
+  overflow: hidden;
+
+  &__text {
+    margin-bottom: 1.5rem;
+    z-index: 10;
+    position: relative;
+  }
+
+  &__user {
+    display: flex;
+    align-items: center;
+  }
+
+  &__photo {
+    height: 4.5rem;
+    width: 4.5rem;
+    border-radius: 50%;
+    margin-right: 1.5rem;
+  }
+
+  &__user-box {
+    margin-right: auto;
+  }
+
+  &__user-name {
+    font-size: 1.1rem;
+    font-weight: 600;
+    text-transform: uppercase;
+  }
+
+  &__user-date {
+    font-size: 1rem;
+    color: var(--color-grey-dark-3);
+  }
+
+  &__rating {
+    font-size: 2.5rem;
+    color: var(--color-primary);
+    font-weight: 300;
+  }
+
+  &::before {
+    content: "\201C";
+    position: absolute;
+    left: -0.5rem;
+    top: -2.75rem;
+    font-size: 20rem;
+    color: var(--color-grey-light-2);
+    line-height: 1;
+    z-index: 1;
   }
 }
