--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -38,13 +38,13 @@
 
 .detail {
   display: flex;
+  font-size: 1.3rem;
   padding: 4rem;
   background-color: var(--color-grey-light-1);
   border-bottom: var(--line);
 }
 
 .description {
-  font-size: 1.3rem;
   background-color: #fff;
   flex: 0 0 60%;
   margin-right: 4rem;
@@ -53,6 +53,9 @@
 }
 
 .user-reviews {
-  background-color: #ff3;
   flex: 1;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
