--- a/css/style.css
+++ b/css/style.css
@@ -403,3 +403,49 @@ body {
     color: var(--color-grey-light-2);
     line-height: 1;
     z-index: 1; }
+
+.cta {
+  padding: 3rem;
+  text-align: center; }
+  .cta__book-now {
+    text-transform: uppercase;
+    font-size: 1.8rem;
+    font-weight: 300;
+    margin-bottom: 2rem; }
+
+.btn {
+  font-size: 1.5rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  border-radius: 100px;
+  cursor: pointer;
+  border: none;
+  transition: all 0.2s;
+  background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+  color: #fff;
+  position: relative;
+  overflow: hidden; }
+  .btn__visible {
+    display: inline-block;
+    padding: 2rem 7.5rem;
+    transition: all 0.2s; }
+  .btn__invisible {
+    display: inline-block;
+    position: absolute;
+    padding: 2rem 0;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    transition: all 0.2s;
+    height: 100%; }
+  .btn:hover .btn__visible {
+    transform: translateY(100%);
+    width: 100%;
+    height: 100%; }
+  .btn:hover .btn__invisible {
+    top: 0; }
+  .btn:hover {
+    background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark)); }
+  .btn:focus {
+    outline: none;
+    animation: pulsate 1s infinite; }
