--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -406,3 +406,73 @@
     z-index: 1;
   }
 }
+
+.cta {
+  padding: 3rem;
+  text-align: center;
+
+  &__book-now {
+    text-transform: uppercase;
+    font-size: 1.8rem;
+    font-weight: 300;
+    margin-bottom: 2rem;
+  }
+}
+
+.btn {
+  font-size: 1.5rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  border-radius: 100px;
+  cursor: pointer;
+  border: none;
+  transition: all 0.2s;
+  background-image: linear-gradient(
+    to right,
+    var(--color-primary-light),
+    var(--color-primary-dark)
+  );
+  color: #fff;
+  position: relative;
+  overflow: hidden;
+
+  &__visible {
+    display: inline-block;
+    padding: 2rem 7.5rem;
+    transition: all 0.2s;
+  }
+
+  &__invisible {
+    display: inline-block;
+    position: absolute;
+    padding: 2rem 0;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    transition: all 0.2s;
+    height: 100%;
+  }
+
+  &:hover &__visible {
+    transform: translateY(100%);
+    width: 100%;
+    height: 100%;
+  }
+
+  &:hover &__invisible {
+    top: 0;
+  }
+
+  &:hover {
+    background-image: linear-gradient(
+      to left,
+      var(--color-primary-light),
+      var(--color-primary-dark)
+    );
+  }
+
+  &:focus {
+    outline: none;
+    animation: pulsate 1s infinite;
+  }
+}
