--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -471,8 +471,8 @@
     );
   }
 
-  &:focus {
-    outline: none;
-    animation: pulsate 1s infinite;
-  }
+  // &:focus {
+  //   outline: none;
+  //   animation: pulsate 1s infinite;
+  // }
 }
