--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -463,13 +463,13 @@
     top: 0;
   }
 
-  &:hover {
-    background-image: linear-gradient(
-      to left,
-      var(--color-primary-light),
-      var(--color-primary-dark)
-    );
-  }
+  // &:hover {
+  //   background-image: linear-gradient(
+  //     to left,
+  //     var(--color-primary-light),
+  //     var(--color-primary-dark)
+  //   );
+  // }
 
   // &:focus {
   //   outline: none;
